--- a/gb/25/6/23/n14537001.md
+++ b/gb/25/6/23/n14537001.md
@@ -3,8 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>台立院通过修正草案 博爱座改名“优先席”</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2025/06/id14537003-775554-600x400.jpg" />
-<h6>博爱座改优先席23日立院初审通过，适用对象从现行老弱妇孺，改为其他有实际需求者优先乘坐。（中央社）
-</h6>
+<h6>博爱座改优先席23日立院初审通过，适用对象从现行老弱妇孺，改为其他有实际需求者优先乘坐。（中央社）</h6>
 <hr>
 <p>【大纪元2025年06月23日讯】（大纪元记者赖玟茹台湾台北报导）立法院23日通过《身障权法》第53条修正草案，博爱座将改名为“优先席”，优先乘坐对象的“老弱妇孺”也确定删除，修改为“或有其他实际需要者优先乘坐之优先席”。修正案将提报院会，目标本会期三读。</p>
 <figure id="14537002" aria-describedby="caption-14537002" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2025/06/id14537002-775503-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2025/06/id14537002-775503-450x300.jpg" alt="卫福部部长邱泰源。" width="500" /></a><figcaption id="caption-14537002" class="wp-caption-text">卫福部部长邱泰源。（宋碧龙／大纪元）</figcaption></figure>
@@ -27,28 +26,28 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14415837.md#1">台立院表决公平会人事案 李镁、洪财隆遭封杀落马</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/22/n14419619.md#1">台立院三读中央政府总预算 赖清德：国家成为无油可动的车</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/20/n10234497.md#1" target="_blank">林辉：财大气粗的共产国际背后是血腥掠夺</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/8/22/n9555520.md#1" target="_blank">为什么绝症有时可以不医而愈？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/18/n9859787.md#1" target="_blank">杨宁：中南海内部电影与特供“内片”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/11/n10706291.md#1" target="_blank">波兰中欧经济论坛 政要签名支持控告江泽民</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/17/n14532918.md#1">夏至之“至”表示什么意义？ 留意这节气宜忌过好夏至</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14534051.md#1">【未解之谜】深海最新神秘发现 改写“生命起源”的认知？！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/28/n14519658.md#1">大唐翰墨端严遒美 笔走龙蛇奔放飘逸（下）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/30/n14520991.md#1">【古道人生】善恶有报 报答来自另外空间 报答来自二十年后</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/21/n14535826.md#1">【未解之谜】灵界能力觉醒 美国女子看到幽灵与彩色光环</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/24/n14537827.md#1">【新闻大破解】美袭伊核设施 中东股市大涨</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/24/n14537814.md#1">【军事情报局】伊朗空袭卡塔尔 川普宣布停战</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/24/n14537831.md#1">【纪元焦点】大量人员流落街头 深圳梦碎了</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/23/n14536899.md#1">研究：玻璃瓶装饮料微塑料含量高于塑料瓶</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/20/n14535229.md#1">六款适合家庭又实惠的最佳SUV 本田CR-V在列</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/23/n14536709.md#1">外资出逃工厂倒闭 深圳失业大军夜宿广场</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/22/n14536475.md#1">马景涛杭州直播带货突晕倒 主持人急喊断播</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/22/n14536452.md#1">澳门开唱被陆粉要求讲普通话 张学友回应获赞</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/23/n14537160.md#1">雪妮丈夫唐佳坠楼身亡 两人恩爱逾半个世纪</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/22/n14536527.md#1">饰演罹患绝症母亲被粉丝叫妈咪 阿娇幽默回应</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/23/n14537196.md#1">陆综《歌手》补位消息引猜测 传郑欣宜有望复出</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/22/n14536243.md#1">被蚊子叮咬如何止痒？ 简单10招快学起来</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/10/n14528626.md#1">眼前一黑是中风先兆 这样吃清血管</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/23/n14536685.md#1">旅馆客房服务怎么给小费？ 专家这么说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/19/n14535109.md#1">癌症跟情绪息息相关 教授亲授抗癌成功关键</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/24/n14537581.md#1">什么是FOMO？ 为何这种习惯具有破坏力？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651306.md#1">【军事情报局】普京拒绝和平 乌军还在红军村</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651372.md#1">【直播】NASA太空人告别太空站并关闭舱门</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651278.md#1">【新闻大家谈】美国家安全战略 把台湾推向高处</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638627.md#1">中产阶级想成为富人 需避免五大消费习惯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650329.md#1">十年来首次降价 五粮液开票价每瓶下调119元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650097.md#1">花滑大奖赛总决赛 华裔天才少女一举夺冠</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649691.md#1">《阿凡达3》官宣中文配音 豪华阵容引期待</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649781.md#1">陈梦晒与黄晓明合照 已签约表哥公司成为艺人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649845.md#1">研究人员找到让你吃泡菜的另一个理由</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646629.md#1">厨房锅具摆放一目了然 轻松下厨不费力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/6/23/n14537001.htm">台立院通过修正草案 博爱座改名“优先席”</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/6/23/n14537001.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
